[tool.poetry]
name = "ecs-appmesh-task-helper"
version = "v0.0.0"
description = "AWS ECS AppMesh task helper"
authors = ["HMRC Digital"]

[tool.poetry.dependencies]
python = "3.10.11"
requests = "*"
python-json-logger = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-pycodestyle = "*"
pytest-black = "*"
reorder-python-imports = "*"
flake8 = "*"
mypy = "*"
types-requests = "*"
bandit = "*"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"
priority = "default"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
